# C-Jeu-Video-Projet

./: CMakeLists.txt  TODO-obstacles-sprites.md
src/: AboutScreen.cpp  AboutScreen.hpp  Arrow.cpp  Arrow.hpp  Bird.cpp  Bird.hpp  Dino.cpp  Dino.hpp  Game.cpp  Game.hpp  GameState.hpp  GroundObstacle.cpp  GroundObstacle.hpp  HeartUI.cpp  HeartUI.hpp  Menu.cpp  Menu.hpp  Obstacle.cpp  Obstacle.hpp  SimpleBackground.cpp  SimpleBackground.hpp  UI.cpp  UI.hpp
